--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,19 +1,18 @@
 :root {
-    --primary: #00B37E;
-    --background: #121214;
-    --text: #FFF;
-    --caption: #8D8D99;
-    --gray: #E1E1E6;
-    --background-light: rgba(255, 255, 255, 0.05);
-  }
-  
-  * {
+    --primary: #467dda;
+    --text: #adadad;
+    --background: #0f1319;
+    --button: #5794f8;
+    --input: #1f2329;
+}
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
-  
-  body {
+}
+
+body {
     background-color: var(--background);
     color: var(--text);
   
